--- a/view/sucess.html
+++ b/view/sucess.html
@@ -10,14 +10,14 @@
     <header class="main-header">
         <nav class="main-header-nav">
             <ul class="main-header-list">
-                <li class="main-header-item"><a class="active" href="/">Shop</a></li>
+                <li class="main-header-item"><a  href="/">Shop</a></li>
                 <li class="main-header-item"><a  href="/admin/add-product">Add Product</a></li>
                 <li class="main-header-item"><a   href="/contact">contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>My Products</h1>
+        <h1>Form succesfully Completed</h1>
     </main>
 </body>
 </html>
